--- a/frege/polls/templates/polls/index.html
+++ b/frege/polls/templates/polls/index.html
@@ -1,7 +1,7 @@
 {% if qlist %}
     <ul>
     {% for q in qlist %}
-        <li><a href="{% url 'detail' q.id %}">{{ q.text }}</a></li>
+        <li><a href="{% url 'polls:detail' q.id %}">{{ q.text }}</a></li>
     {% endfor %}
 {% else %}
     <p>No polls are available.</p>
