--- a/frege/polls/templates/polls/detail.html
+++ b/frege/polls/templates/polls/detail.html
@@ -1,6 +1,12 @@
 <h1>{{ q.text }}</h1>
-<ul>
+
+{% if error_message%}<p><strong>{{ error_message }}</strong></p>{% endif %}
+
+<form action="{% url 'polls:vote' q.id %}" method ="post">
+{% csrf_token %}
 {% for c in q.choice_set.all %}
-    <li>{{ c.text }}</li>
+    <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ c.id }}"/>
+    <label for="choice{{ forloop.counter }}">{{ c.text }}</label><br>
 {% endfor %}
-</ul>
+<input type="submit" value="Vote"/>
+</form>
