--- a/frege/polls/templates/polls/index.html
+++ b/frege/polls/templates/polls/index.html
@@ -1,3 +1,7 @@
+{% load staticfiles %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}"/>
+
 {% if qlist %}
     <ul>
     {% for q in qlist %}
