--- a/frege/logic/templates/logic/index.html
+++ b/frege/logic/templates/logic/index.html
@@ -7,7 +7,7 @@
     <div class="container">
     <div class="list-group">
     {% for chapter in chapter_list %}
-        <a class="list-group-item text-center" href="{% url 'logic:chapter' chapter.id %}">
+        <a class="list-group-item text-center" href="{% url 'logic:chapter' chapter.number %}">
         <span class="pull-right"><h4 class="text-muted">{{ chapter.number }}</h4></span>
         <h4>{{ chapter.title }}</h4>
         </a>
