--- a/frege/logic/templates/logic/base.html
+++ b/frege/logic/templates/logic/base.html
@@ -9,8 +9,30 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         
     <!-- Icon -->
-    <link rel="shortcut icon" href="images/favicon2.ico" type="image/x-icon">
-    <link rel="icon" href="images/favicon2.ico" type="image/x-icon">
+<!--    <link rel="shortcut icon" href="{% static 'logic/images/favicon.ico'%}" type="image/x-icon"> -->
+<!--    <link rel="icon" href="{% static 'logic/images/favicon.ico'%}" type="image/x-icon"> -->
+
+    <link rel="apple-touch-icon" sizes="57x57" href="/static/logic/images/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/static/logic/images/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/static/logic/images/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/static/logic/images/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/static/logic/images/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/static/logic/images/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/static/logic/images/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/static/logic/images/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/logic/images/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" href="/static/logic/images/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/static/logic/images/favicon-194x194.png" sizes="194x194">
+    <link rel="icon" type="image/png" href="/static/logic/images/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="/static/logic/images/android-chrome-192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="/static/logic/images/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/static/logic/images/manifest.json">
+    <link rel="mask-icon" href="/static/logic/images/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/static/logic/images/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-TileImage" content="/static/logic/images/mstile-144x144.png">
+    <meta name="msapplication-config" content="/static/logic/images/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 
     <title>{% block title %}Frege rulz{% endblock%} | לוגיקה</title>
 
