choice question template

--- a/frege/logic/templates/logic/question_base.html
+++ b/frege/logic/templates/logic/question_base.html
@@ -12,7 +12,7 @@
     <div class="panel panel-default">
       <div class="panel-body">
         <p style="white-space: pre-wrap;">{{ question.text }}</p>
-        <p><b>הזן תשובה:</b></p>
+        <p><b>{% block pre_question %}הזמן תשובה{% endblock %}</b></p>
 
         {% block question_content %}
         {% endblock %}
