--- a/frege/logic/templates/logic/choice.html
+++ b/frege/logic/templates/logic/choice.html
@@ -1,6 +1,15 @@
 {% extends "logic/question_base.html" %}
 
+{% block pre_question %}בחר תשובה{% endblock %}
+
 {% block question_content %}
 
-<p>{{ question }}</p>
+    <div class="list-group">
+    {% for choice in question.choice_set.all %}
+      <a class="list-group-item text-right" href="{% url 'logic:chapter' chapter.number %}">
+        {{ choice }}
+      </a>
+    {% endfor %}
+    </div>
+
 {% endblock question_content %} 
