minor html changes

--- a/frege/logic/templates/logic/choice.html
+++ b/frege/logic/templates/logic/choice.html
@@ -1,6 +1,6 @@
 {% extends "logic/question_base.html" %}
 
-{% block pre_question %}בחר תשובה{% endblock %}
+{% block pre_question %}בחר/י תשובה{% endblock %}
 
 {% block question_content %}
 
