--- a/frege/logic/templates/logic/base.html
+++ b/frege/logic/templates/logic/base.html
@@ -88,7 +88,7 @@
               </ul>
             </li>
           </ul>
-        </div><!-- /.nav-collapse -->
+        </div>
       </div>
     </nav>
 
