--- a/frege/logic/templates/logic/question_base.html
+++ b/frege/logic/templates/logic/question_base.html
@@ -16,12 +16,14 @@
 
         {% block question_content %}
         {% endblock %}
-        
-    <!-- Progress -->
+     </div>
+    </div>
+    
+    <!-- Progress 
     <div class="progress">
       <div class="progress-bar progress-bar-default progress-bar-striped active border" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: {{ question.number }}%">
       </div>
-    </div>
+    </div>-->
 
     <!-- Answer alerts -->
     <div class="alert alert-success" role="alert" ng-show="isCorrect !== null && isCorrect">
@@ -40,13 +42,19 @@
         <strong>תשובה ריקה.</strong> אנא הזן תשובה.
       </div>
 
-    <!-- Navigation -->
-    <nav class="pull-left"> 
-      <ul class="pagination">
-        <li ng-repeat="question in questions" ng-class="$index === i? 'active' : ''" ng-click="go($index)">
-          <a href="" ng-class="getPageClass($index)">{{ question.number }}</a>
-        </li>
-      </ul>
-    </nav>
+    <!-- Chapter questions navigation -->
+    <div class="page-header">
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-body">
+{% for chap_question in question.chapter.get_questions %}
+  {% if chap_question == question %}
+        <button class="btn btn-primary">{{ chap_question.number }}</button>
+  {% else %}
+        <button class="btn btn-default">{{ chap_question.number }}</button>
+  {% endif %}
+{% endfor %}
+      </div>
+    </div>
   </div>
 {% endblock content %}
