--- a/frege/logic/templates/logic/question_base.html
+++ b/frege/logic/templates/logic/question_base.html
@@ -4,7 +4,7 @@
 
 
 {% block content %}
-  <div ng-app="myApp" ng-controller="qCtrl" class="container" role="main">
+  <div ng-app="myApp" ng-controller="qCtrl" class="container" role="main" id="main">
     <!-- Question panel -->
     <div class="page-header">
     <h3>שאלה {{ question.number }} <small>פרק {{ chapter.number }}: {{ chapter.title }}</small></h3>
