--- a/frege/logic/templates/logic/base.html
+++ b/frege/logic/templates/logic/base.html
@@ -65,18 +65,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          <!-- Logo
           <a class="navbar-brand" href="/">מבוא ללוגיקה</a>
-          <a href="/"><img class="" style="padding: 15px;" src="/static/logic/images/favicon-32x32.png" id="logo"/></a>
+          <a href="/"><img class="" style="padding: 15px;" src="/static/logic/images/favicon-32x32.png" id="logo"/></a> -->
         </div>
-        <div id="navbar" class="navbar-collapse collapse pull-left">
-          <ul class="nav navbar-nav">
-            <li><a href="/accounts/logout"><span class="glyphicon glyphicon-off"></span> יציאה</a></li>
-          </ul>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse pull-right">
-          <ul class="nav navbar-nav">
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav pull-right">
             <li><a href="#contact"><span class="glyphicon glyphicon-file"></span> התשובות שלי</a></li>
             <li><a href="{% url 'logic:index'%}"><span class="glyphicon glyphicon-th-list"></span> פרקים</a></li>
+          </ul>
+          <ul class="nav navbar-nav pull-left">
+            <li><a href="{% url 'logout'%}"><span class="glyphicon glyphicon-off"></span> יציאה</a></li>
           </ul>
         </div>
       </div>
