--- a/frege/logic/templates/logic/question_base.html
+++ b/frege/logic/templates/logic/question_base.html
@@ -25,7 +25,7 @@
       </div>
     </div>-->
 
-    <!-- Answer alerts -->
+    <!-- Answer alerts 
     <div class="alert alert-success" role="alert" ng-show="isCorrect !== null && isCorrect">
       <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
       <strong>תשובה נכונה!</strong> תשובתך אכן נכונה. 
@@ -40,7 +40,7 @@
       <div class="alert alert-warning" role="alert" ng-show="emptyAns !== null  && emptyAns" ng-click="emptyAns = null">
         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
         <strong>תשובה ריקה.</strong> אנא הזן תשובה.
-      </div>
+      </div> -->
 
     <!-- Chapter questions navigation -->
     <div class="page-header">
