--- a/frege/logic/templates/logic/base.html
+++ b/frege/logic/templates/logic/base.html
@@ -39,6 +39,7 @@
     <link href="{% static 'logic/bootstrap/css/bootstrap-paper.min.css'%}" rel="stylesheet">
     <!-- My own CSS overrides -->
     <link href="{% static 'logic/css/mycss.css'%}" rel="stylesheet" media="screen">
+    <link href="{% static 'logic/css/animate.css'%}" rel="stylesheet" media="screen">
     <!-- Pretty fonts courtesy of Google -->
     <link href='https://fonts.googleapis.com/css?family=Alef' rel='stylesheet' type='text/css'>
     <!-- Angular JS is king -->
@@ -47,6 +48,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Bootstrap JS -->
     <script src="{% static 'logic/bootstrap/js/bootstrap.min.js'%}"></script>
+    <script src="{% static 'logic/bootstrap/js/bootstrap-notify.min.js'%}"></script>
     <!-- My own JS code -->
     <script src="{% static 'logic/js/controller.js'%}"></script>
     <script src="{% static 'logic/js/formula.js'%}"></script>
