--- a/frege/logic/templates/logic/choice.html
+++ b/frege/logic/templates/logic/choice.html
@@ -32,6 +32,7 @@ $(document).ready(function(){
                 message: "<strong>לא נבחרה תשובה</strong>"
             },{
                 type: "warning",
+                delay: 1000,
             });
             return false
         }
@@ -65,6 +66,7 @@ $(document).ready(function(){
         })
         .fail(function(response){
             if (response.responseText) {
+                $.notifyClose();
                 $.notify({
                     icon: "glyphicon glyphicon-wrench",
                     message: "<strong>נראה שיש בעיה בשרת...</strong> \
@@ -73,6 +75,8 @@ $(document).ready(function(){
                              <br>בינתיים, הנה לב ממני: <span class='glyphicon glyphicon-heart'></span>"
                 },{
                     type: "info",
+                    allow_dismiss: true,
+                    newest_on_top: true,
                     delay: 15000,
                 });
                 $("#answer").html("אישור");
