--- a/frege/logic/templates/logic/base.html
+++ b/frege/logic/templates/logic/base.html
@@ -42,17 +42,15 @@
     <link href="{% static 'logic/css/animate.css'%}" rel="stylesheet" media="screen">
     <!-- Pretty fonts courtesy of Google -->
     <link href='https://fonts.googleapis.com/css?family=Alef' rel='stylesheet' type='text/css'>
-    <!-- Angular JS is king -->
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) TODO: download this so won't have to request every time-->
+    <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Bootstrap JS -->
     <script src="{% static 'logic/bootstrap/js/bootstrap.min.js'%}"></script>
     <script src="{% static 'logic/bootstrap/js/bootstrap-notify.min.js'%}"></script>
-    <!-- My own JS code -->
+    <!-- My own JS code 
     <script src="{% static 'logic/js/controller.js'%}"></script>
     <script src="{% static 'logic/js/formula.js'%}"></script>
-    <script src="{% static 'logic/js/truthtable.js'%}"></script>
+    <script src="{% static 'logic/js/truthtable.js'%}"></script>-->
   </head>
 
   <body role="document">
@@ -73,7 +71,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav pull-right">
-            <li><a href="#contact"><span class="glyphicon glyphicon-file"></span> התשובות שלי</a></li>
+            <li><a href="#contact"><span class="glyphicon glyphicon-user"></span> {% firstof user.get_full_name user.get_username %}</a></li>
             <li><a href="{% url 'logic:index'%}"><span class="glyphicon glyphicon-th-list"></span> פרקים</a></li>
           </ul>
           <ul class="nav navbar-nav pull-left">
@@ -88,7 +86,7 @@
 
     <footer class="footer">
       <div class="container pull-left">
-        <p class="text-muted small"><small></small></p>
+        <p class="text-muted small"><small>פותח על ידי אלירן חזיזה עבור אוניברסיטת תל אביב / החוג לפילוסופיה</small></p>
       </div>
     </footer>
 
