added about view (disabled for now), footer link

--- a/frege/logic/templates/logic/base.html
+++ b/frege/logic/templates/logic/base.html
@@ -85,8 +85,12 @@
 {% endblock %} 
 
     <footer class="footer">
-      <div class="container pull-left">
-        <p class="text-muted small"><small>פותח על ידי אלירן חזיזה עבור אוניברסיטת תל אביב / החוג לפילוסופיה</small></p>
+      <div class="container">
+        <p class="text-muted text-center small"><small>
+          <!--<a href="{% url 'logic:about'%}">אודות</a>-->
+          <br>
+          <a class="text-muted" href="https://github.com/eliranhaze/frege2"><u>פותח על ידי אלירן חזיזה</u></a> עבור אוניברסיטת תל אביב
+        </small></p>
       </div>
     </footer>
 
