github link to open in new tab

--- a/frege/logic/templates/logic/base.html
+++ b/frege/logic/templates/logic/base.html
@@ -88,8 +88,7 @@
       <div class="container">
         <p class="text-muted text-center small"><small>
           <!--<a href="{% url 'logic:about'%}">אודות</a>-->
-          <br>
-          <a class="text-muted" href="https://github.com/eliranhaze/frege2"><u>פותח על ידי אלירן חזיזה</u></a> עבור אוניברסיטת תל אביב
+          <a class="text-muted" target="_blank" href="https://github.com/eliranhaze/frege2">פותח על ידי אלירן חזיזה</a> עבור אוניברסיטת תל אביב
         </small></p>
       </div>
     </footer>
