--- a/frege/logic/templates/logic/question_base.html
+++ b/frege/logic/templates/logic/question_base.html
@@ -7,7 +7,7 @@
     </div>
     <div class="panel panel-default">
       <div class="panel-body">
-        <p style="white-space: pre-wrap;">{{ question.text }}</p>
+        <p style="white-space: pre-wrap; font-size: 110%;">{{ question.text }}</p>
         <p><b>{% block pre_question %}הזמן תשובה{% endblock %}</b></p>
 
         {% block question_content %}
