change question page title

--- a/frege/logic/templates/logic/question_base.html
+++ b/frege/logic/templates/logic/question_base.html
@@ -1,5 +1,7 @@
 {% extends "logic/chapter_base.html" %}
 
+{% block title %}שאלה {{question.number }} פרק {{ chapter.number }}{% endblock %}
+
 {% block chapter_content %}
     <!-- Question panel -->
     <div class="page-header">
