moved js code to separate file

--- a/frege/logic/templates/logic/base.html
+++ b/frege/logic/templates/logic/base.html
@@ -51,6 +51,7 @@
     <script src="{% static 'logic/js/controller.js'%}"></script>
     <script src="{% static 'logic/js/formula.js'%}"></script>
     <script src="{% static 'logic/js/truthtable.js'%}"></script>-->
+    <script src="{% static 'logic/js/requests.js'%}"></script>
   </head>
 
   <body role="document">
