--- a/frege/logic/static/logic/css/mycss.css
+++ b/frege/logic/static/logic/css/mycss.css
@@ -8,6 +8,16 @@ body {
     font-family: 'Alef', sans-serif;
     font-size: large;
 }
+
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: default;
+}
 /*
 .btn-success {
     background-color: #50BF7F;
@@ -25,6 +35,7 @@ body {
     background-color: #F05146;
 }
 */
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
