--- a/frege/logic/templates/logic/base.html
+++ b/frege/logic/templates/logic/base.html
@@ -57,7 +57,7 @@
   <body role="document">
 
     <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top noselect">
       <div class="container">
         <div class="navbar-header pull-right">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -85,7 +85,7 @@
 {% block content %}
 {% endblock %} 
 
-    <footer class="footer">
+    <footer class="footer noselect">
       <div class="container">
         <p class="text-muted text-center small"><small>
           <!--<a href="{% url 'logic:about'%}">אודות</a>-->
