--- a/frege/logic/templates/logic/question_base.html
+++ b/frege/logic/templates/logic/question_base.html
@@ -11,6 +11,19 @@
 
         {% block question_content %}
         {% endblock %}
+        <div style="padding: 5px;margin-top: 20px;">
+          <button class="btn btn-default btn-lg" id="answer">אישור</button>
+        </div>
      </div>
-    </div>
+  </div>
+
+  <script>
+    function register_event() {
+        $('#answer').one('click', function() {
+            post_answer('{% url 'logic:question' chapter.number question.number %}', get_post_data(), '{{ csrf_token }}');
+        });
+    }
+    $(document).ready(register_event);
+  </script>
+
 {% endblock chapter_content %}
