new feature: truth table

--- a/frege/logic/templates/logic/choice.html
+++ b/frege/logic/templates/logic/choice.html
@@ -22,5 +22,6 @@
     function on_success() {
         $('input[name=choice]:not(:checked)').attr('disabled','disabled');
     }
+    function on_response(data){}
   </script>
 {% endblock question_content %} 
